--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       h2 {
         font-size: 30px;
       }
+      html {
+        font-size: 18px;
+      }
 
       /* SOCIAL STYLES */
       .social-link {
@@ -20,10 +23,21 @@
       }
 
       /* BIO STYLES */
+      .bio-wrapper {
+        font-size: 24px;
+      }
       .bio-box {
         border: 1px solid #000;
         margin: 10%;
         width: 50%;
+        font-size: 1rem;
+        padding: 2.5em;
+      }
+      .bio-box h3 {
+        font-size: 1.5em;
+      }
+      .bio-copy {
+        font-size: 1em;
       }
       .bio-copy a {
         color: #008000;
