Add display element to social-link

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       .social-link {
         background: rgba(167, 167, 167, 0.2);
         color: rgba(0, 0, 255, 0.7);
+        display: inline-block;
+        height: 36px;
+        width: 36px;
       }
 
       /* BIO STYLES */
